--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enmanuel Portfolio</title>
-    <script type="module" crossorigin src="index.js"></script>
-    <link rel="stylesheet" crossorigin href="index.css">
+    <script type="module" crossorigin src="enmauscuvilca.github.io/index.js"></script>
+    <link rel="stylesheet" crossorigin href="enmauscuvilca.github.io/index.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+
   </body>
 </html>
